[gd_scene load_steps=4 format=3 uid="uid://crdf2j3g21hjo"]

[ext_resource type="Script" path="res://Scripts/mixer.gd" id="1_6kde5"]
[ext_resource type="Texture2D" uid="uid://di81r5tdt6ymv" path="res://Assets/Art/mixer.png" id="2_v7kwo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lv25x"]
size = Vector2(101, 122)

[node name="mixer" type="Node2D" groups=["container"]]
script = ExtResource("1_6kde5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-9.53674e-07, -4)
scale = Vector2(1.79688, 1.56818)
texture = ExtResource("2_v7kwo")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 51.0
offset_top = -56.0
offset_right = 143.0
offset_bottom = -33.0
scale = Vector2(0.76901, 0.833675)
text = "CONTAINER"

[node name="Area2D" type="Area2D" parent="." groups=["container"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.5, 5)
shape = SubResource("RectangleShape2D_lv25x")

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
